<resources>
    <string name="app_name">Expandable_ListView</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="savings">Savings</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="budget">Budget</string>
    <string name="expense">Expense</string>
    <string name="item_name">Item Name</string>
    <string name="item_cost">Item Cost</string>

</resources>
