<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f4f4f4"
  >


    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="458dp"
        android:id="@+id/expandableListView" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/income"
            android:id="@+id/income_textView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/expenses"
            android:id="@+id/expenses_textView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/savings"
            android:id="@+id/savings_textView"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"


            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0.00"
            android:id="@+id/income_txt"
            android:layout_weight="1"
            android:textAlignment="center"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0.00"
            android:id="@+id/expenses_txt"
            android:layout_weight="1"
            android:textAlignment="center"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0.00"
            android:id="@+id/savings_txt"
            android:layout_weight="1"
            android:textAlignment="center"

            />


    </LinearLayout>


</LinearLayout>
